@@ -45,15 +45,13 @@ public class ResourceListIconRenderer extends DefaultTreeCellRenderer
     {
         Component ret = super.getTreeCellRendererComponent(tree, value, selected, expanded, leaf, row, hasFocus);
 
-        if (value instanceof ResourceTreeNode)
+        if (value instanceof ResourceTreeNode node)
         {
             if (iconCache.containsKey(value))
             {
                 setIcon(iconCache.get(value));
                 return ret;
             }
-
-            ResourceTreeNode node = (ResourceTreeNode) value;
 
             String nameOG = node.toString();
             String name = nameOG.toLowerCase();
@@ -101,7 +99,7 @@ public class ResourceListIconRenderer extends DefaultTreeCellRenderer
                         finished = true;
                     else
                     {
-                        TreeNode treeNode = nodes.get(0);
+                        TreeNode treeNode = nodes.getFirst();
                         nodes.remove(treeNode);
                         int children = treeNode.getChildCount();
                         if (children >= 1)
